fix graphs not showing up

--- a/sentiment_task4.ipynb
+++ b/sentiment_task4.ipynb
@@ -466,7 +466,7 @@
     "# graph for Binary, Count Vectorizer, 5 epochs\n",
     "train_feats = [(x, y) for x,y in zip(X_train_CV_binary, y_train) ]\n",
     "dev_feats = [(x, y) for x,y in zip(X_dev_CV_binary, y_dev) ]\n",
-    "sutils.create_training_graph(sutils.neural_net_metrics, train_feats, dev_feats, '5 Epochs - Neural Network', 'Neural_Network_CV_Binary_5Epochs_Graph.png', verbose=True, num_epochs=5)"
+    "sutils.create_training_graph(sutils.neural_net_metrics, train_feats, dev_feats, '5 Epochs - Neural Network', 'Neural_Network_CV_Binary_5Epochs_Graph', verbose=True, num_epochs=5)"
    ]
   },
   {
@@ -734,7 +734,7 @@
     "# graph for Binary, Count Vectorizer, 10 epochs\n",
     "train_feats = [(x, y) for x,y in zip(X_train_CV_binary, y_train) ]\n",
     "dev_feats = [(x, y) for x,y in zip(X_dev_CV_binary, y_dev) ]\n",
-    "sutils.create_training_graph(sutils.neural_net_metrics, train_feats, dev_feats, '10 Epochs - Neural Network', 'Neural_Network_CV_Binary_10Epochs_Graph.png', verbose=True, num_epochs=10)"
+    "sutils.create_training_graph(sutils.neural_net_metrics, train_feats, dev_feats, '10 Epochs - Neural Network', 'Neural_Network_CV_Binary_10Epochs_Graph', verbose=True, num_epochs=10)"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
     "# graph for Binary, Count Vectorizer, 20 epochs\n",
     "train_feats = [(x, y) for x,y in zip(X_train_CV_binary, y_train) ]\n",
     "dev_feats = [(x, y) for x,y in zip(X_dev_CV_binary, y_dev) ]\n",
-    "sutils.create_training_graph(sutils.neural_net_metrics, train_feats, dev_feats, '20 Epochs - Neural Network', 'Neural_Network_CV_Binary_20Epochs_Graph.png', verbose=True, num_epochs=20)\n"
+    "sutils.create_training_graph(sutils.neural_net_metrics, train_feats, dev_feats, '20 Epochs - Neural Network', 'Neural_Network_CV_Binary_20Epochs_Graph', verbose=True, num_epochs=20)\n"
    ]
   },
   {
