--- a/sentiment_task015.ipynb
+++ b/sentiment_task015.ipynb
@@ -79,9 +79,13 @@
     "Answer the following questions __after__ you complete this assignment (no more than 1 sentence per question required, this section is graded on completion):\n",
     "\n",
     "1. Does this work reflect your best effort? \n",
+    "Yes, this work reflects my best effort.\n",
     "2. What was/were the most challenging part(s) of the assignment?\n",
+    "Training the neural network was the most challenging part because it took a long time and required omptimization in order to be done in a reasonable timeframe which was challenging. \n",
     "3. If you want feedback, what function(s) or problem(s) would you like feedback on and why?\n",
-    "4. Briefly reflect on how your partnership functioned--who did which tasks, how was the workload on each of you individually as compared to the previous homeworks, etc."
+    "We would like feedback on any questions we don't receive full credit so we can learn from our mistakes for the future.\n",
+    "4. Briefly reflect on how your partnership functioned--who did which tasks, how was the workload on each of you individually as compared to the previous homeworks, etc.\n",
+    "Julia Geller was responsible for task 3 and 4 while Shae Marks was responsible for task 0, 5 and 2. Julia implemented most general functions in sentiment_utils while we each implemented functions specific to our tasks. We both looked over eachother's work. We feel we both did an equal amount of work and found this homework more manageable because of ourshared workload and seamless communication."
    ]
   },
   {
